<resources>
    <string name="app_name">CalcLab</string>
    <string name="default_display">Display</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_multiply">*</string>
    <string name="button_divide">/</string>
    <string name="button_mod">%</string>
    <string name="button_equal">=</string>
    <string name="button_clear">C</string>
</resources>
