<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/calculator_buttons"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button1"
        style="@style/CalculatorButtons"
        android:text="@string/button1"/>

    <Button
        android:id="@+id/button2"
        style="@style/CalculatorButtons"
        android:layout_toRightOf="@id/button1"
        android:text="@string/button2"/>

    <Button
        android:id="@+id/button3"
        style="@style/CalculatorButtons"
        android:layout_toRightOf="@id/button2"
        android:text="@string/button3"/>

    <Button
        android:id="@+id/button_plus"
        style="@style/CalculatorButtons"
        android:layout_toRightOf="@id/button3"
        android:text="@string/button_plus"/>

    <Button
        android:id="@+id/button4"
        style="@style/CalculatorButtons"
        android:layout_below="@id/button1"
        android:text="@string/button4"/>

    <Button
        android:id="@+id/button5"
        style="@style/CalculatorButtons"
        android:layout_toRightOf="@id/button4"
        android:layout_alignBaseline="@id/button4"
        android:text="@string/button5"/>

    <Button
        android:id="@+id/button6"
        style="@style/CalculatorButtons"
        android:layout_toRightOf="@id/button5"
        android:layout_alignBaseline="@id/button4"
        android:text="@string/button6"/>

    <Button
        android:id="@+id/button_minus"
        style="@style/CalculatorButtons"
        android:layout_toRightOf="@id/button6"
        android:layout_alignBaseline="@id/button4"
        android:text="@string/button_minus"/>

    <Button
        android:id="@+id/button7"
        style="@style/CalculatorButtons"
        android:layout_below="@id/button4"
        android:text="@string/button7"/>

    <Button
        android:id="@+id/button8"
        style="@style/CalculatorButtons"
        android:layout_toRightOf="@id/button7"
        android:layout_alignBaseline="@id/button7"
        android:text="@string/button8"/>

    <Button
        android:id="@+id/button9"
        style="@style/CalculatorButtons"
        android:layout_toRightOf="@id/button8"
        android:layout_alignBaseline="@id/button7"
        android:text="@string/button9"/>

    <Button
        android:id="@+id/button_multiply"
        style="@style/CalculatorButtons"
        android:layout_toRightOf="@id/button9"
        android:layout_alignBaseline="@id/button7"
        android:text="@string/button_multiply"/>

    <Button
        android:id="@+id/button0"
        style="@style/CalculatorButtons"
        android:layout_width="@dimen/button_zero_width"
        android:layout_below="@id/button7"
        android:text="@string/button0"/>

    <Button
        android:id="@+id/button_mod"
        style="@style/CalculatorButtons"
        android:layout_toRightOf="@id/button0"
        android:layout_below="@id/button9"
        android:layout_alignBaseline="@id/button0"
        android:text="@string/button_mod"/>

    <Button
        android:id="@+id/button_divide"
        style="@style/CalculatorButtons"
        android:layout_toRightOf="@id/button_mod"
        android:layout_alignBaseline="@id/button0"
        android:text="@string/button_divide"/>

    <Button
        android:id="@+id/button_clear"
        style="@style/CalculatorButtons"
        android:layout_below="@id/button0"
        android:layout_width="@dimen/button_clear_width"
        android:text="@string/button_clear"/>

    <Button
        android:id="@+id/button_equal"
        style="@style/CalculatorButtons"
        android:layout_toRightOf="@id/button_clear"
        android:layout_alignBaseline="@id/button_clear"
        android:text="@string/button_equal"/>

</RelativeLayout>